--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "startup-nextjs-template",
+  "name": "lubricantes-del-oeste-landing-page",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,8 +15,7 @@
     "next": "13.1.6",
     "next-themes": "0.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-modal-video": "1.2.10"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "10.4.13",
