--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@next/font": "13.1.6",
     "date-fns": "^2.30.0",
     "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
+    "eslint-config-next": "^12.0.4",
     "next": "13.1.6",
     "next-themes": "0.2.1",
     "react": "18.2.0",
